tests/e2e/semantics/foreach_invalid4.error
Error: syntax error in story at line 1, column 9

1|    foreach items as item
              ^^^^^

E0101: Variable `items` has not been defined.
