tests/e2e/semantics/foreach_invalid4.story
foreach items as item
    x = 0
